hphp/test/zend/good/Zend/tests/bug42818.php.expectf

Fatal error: clone called on non-object in %s/bug42818.php on line 2
